--- a/Docker/docker-compose-ore.yml
+++ b/Docker/docker-compose-ore.yml
@@ -7,5 +7,5 @@ services:
       context: ../
       dockerfile: Docker/Dockerfile-ORE
       args:
-        - quantlib_version=1.18_c310d3f4e
+        - quantlib_version=1.18_620b3bac4d
         - num_cores=16
